@startuml Entity Relationship Model

entity Human {
    Human id
    --
    Name
    Animal instance id (FK)
    Home location id (KF)
}

entity Animal {
    Animal id
    --
    Biological species (FK)
    Smartness
    Current location id (FK)
}

entity Species {
    Species id
    --
    Species name
}

entity Action {
    Action id
    --
    Action name
    Description
}

entity Plan {
    Plan id
    --
    Start time
    End time
}

entity Location {
    Location id
    --
    Name
    Description
    Placement
}

entity AnimalsPack {
    Aimals pack id
    --
    Leader id (FK)
    Habitat location id (FK)
}

Human |o--|| Animal

Human }o--o| Location

Animal }o--|| Location

Animal }o--|| Species

Animal }|--o{ Plan

Animal }|--o| AnimalsPack

AnimalsPack ||--|| Animal

AnimalsPack }o--|| Location

Plan }o--|{ Action

@enduml